--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -54,7 +54,7 @@
         <p><strong>Location:</strong> {{currentLocationWeatherdata?.name}}</p>
         <p><strong>Temprature: </strong> {{currentLocationWeatherdata?.main?.temp}}&deg; F</p>
         <p><strong>Description: </strong> {{currentLocationWeatherdata?.weather[0]?.description}}</p>
-        <p><strong>Wind: </strong> {{currentLocationWeatherdata?.wind?.speed}}miles/hr</p>
+        <!-- <p><strong>Wind: </strong> {{currentLocationWeatherdata?.wind?.speed}}miles/hr</p> -->
       </div>
     </ng-container>
     <ng-container *ngIf="weatherdata">
@@ -63,7 +63,7 @@
         <p><strong>Location:</strong> {{weatherdata?.name}}</p>
         <p><strong>Temprature: </strong> {{weatherdata?.main?.temp}}&deg; F</p>
         <p><strong>Description: </strong> {{weatherdata?.weather[0]?.description}}</p>
-        <p><strong>Wind: </strong> {{weatherdata?.wind?.speed}}miles/hr</p>
+        <!-- <p><strong>Wind: </strong> {{weatherdata?.wind?.speed}}miles/hr</p> -->
       </div>
     </ng-container>
   </div>
